--- a/Millennium_Dawn_Rus/localisation/MD_focus_ENG_l_russian.yml
+++ b/Millennium_Dawn_Rus/localisation/MD_focus_ENG_l_russian.yml
@@ -254,7 +254,7 @@
  ENG_union_of_nations:0 "Союз наций"
  ENG_union_of_nations_desc:0 "Европейский Союз - это грандиозный проект, но разные национальные государства должны быть сохранены. Объединенный ЕС не был бы велик."
  ENG_royal_army:0 "Королевская армия"
- ENG_royal_army_desc:0 "While there is a Royal Navy and a Royal Air Force, our army is not yet royal. Let's give them such a designation, honoring their most recent achievements."
+ ENG_royal_army_desc:0 "Пока есть королевский флот и королевские военно-воздушные силы, наша армия еще не королевская. Давайте дадим им такое обозначение, в честь их последних достижений."
  ENG_britannia_rules_the_waves:0 "Британия правит морями"
  ENG_britannia_rules_the_waves_desc:0 "Правь, Британия! Британия правит морями!\nБританцы никогда, никогда, никогда не будут рабами!"
  ENG_defensive_assistance:0 "Оборонительная помощь"
@@ -271,10 +271,10 @@
  ENG_extra_research_slot_2_desc:0 "Мы должны перенаправить больше ресурсов на исследования."
  ENG_irish_referendum:0 "Irish Referendum"
  ENG_irish_referendum_desc:0 "With Leaving the EU, the some People of Northern Ireland want a Reunification! This has to end! Call a referendum and let the pepole decide!"
- ENG_scottish_referendum:0 "Scottish Referendum"
- ENG_scottish_referendum_desc:0 "With Leaving the EU, the some People of Scotland want Independence! This has to end! Call a referendum and let the pepole decide!"
+ ENG_scottish_referendum:0 "Шотландский референдум"
+ ENG_scottish_referendum_desc:0 "Покидая ЕС, некоторые жители Шотландии хотят независимости! Этому надо положить конец! Созовите референдум и пусть решают сами!"
  ENG_global_britain:0 "Global Britain"
- ENG_global_britain_desc:0 "After we solve our problems at home and recovered form Brexit, Britain can rise again."
+ ENG_global_britain_desc:0 "После того, как мы решим наши проблемы дома и восстановимся в форме Brexit, Британия может снова подняться."
  
  ### Tooltips
  tooltip_ENG_irish_referendum:0 "§YIF§!: §Y[EUU.GetFlag] The European Union§! is in §Rbad shape§! (§YEuropeanism§! < §R60%§!): Remove §YIrish Nationalism§!\n§YIF§!: §Y[EUU.GetFlag] The European Union§! is in §Ggood shape§! (§YEuropeanism§! > §G90%§!): One of §Y2§! two things will happen.\n§Y70%§! chance: Remove §YIrish Nationalism§!\n§Y30%§! chance: §Y[IRE.GetNameWithFlag]§! Becomes owner and controller of §Y[17.State.GetName]§! AND remove §YIrish Nationalism§!.\n§YOTHERWISE§!: One of §Y2§! two things will happen.\n§Y90%§! chance: Remove §YIrish Nationalism§!\n§Y10%§! chance: §Y[IRE.GetNameWithFlag]§! Becomes owner and controller of §Y[17.State.GetName]§! AND remove §YIrish Nationalism§!.\n"
@@ -307,7 +307,7 @@
  ENG_liberal_economics_idea_desc:0 ""
  ENG_internet_surveillance_idea:0 "Internet Surveillance"
  ENG_internet_surveillance_idea_desc:0 ""
- ENG_nationalism_idea:0 "English Nationalism"
+ ENG_nationalism_idea:0 "Английский национализм"
  ENG_nationalism_idea_desc:0 ""
  ENG_broken_the_banks:0 "Broke the Banks"
  ENG_broken_the_banks_desc:0 ""
