--- a/Millennium_Dawn_Rus/localisation/MD_focus_ITA_l_russian.yml
+++ b/Millennium_Dawn_Rus/localisation/MD_focus_ITA_l_russian.yml
@@ -32,7 +32,7 @@
  ITA_education_reforms:0 "Реформы образования"
  ITA_education_reforms_desc:0 "Немцы, французы и британцы доминируют в европейском высшем образовании. Итальянские университеты должны быть лучшими на континенте, если мы хотим, чтобы наша страна стала ведущей европейской державой!"
  ITA_economic_reforms:0 "Экономические реформы"
- ITA_economic_reforms_desc:0 "Our economy has suffered from mismanagement. Some reform in economic legislation and government involvement is in order, and should help foster prosperity."
+ ITA_economic_reforms_desc:0 "Наша экономика пострадала от бесхозяйственности. Определенные реформы в экономическом законодательстве и участие правительства в этом процессе находятся в порядке и должны способствовать процветанию."
  ITA_oil_fields_sicily:0 "Нефтяные месторождения на Сицилии"
  ITA_oil_fields_sicily_desc:0 "Кому нужна Саудовская Аравия или Венесуэла? Настоящая сверхдержава самодостаточна! Мы должны начать добычу нефти прямо здесь, в Средиземном море, и сицилийские воды могут обладать большими запасами нефти!"
  ITA_european_logistics:0 "Новая логистика"
@@ -72,25 +72,25 @@
  ITA_reestablish_rome:0 "Новый римский сенат"
  ITA_reestablish_rome_desc:0 "Настоящий золотой век Италии пришелся на то время, когда Римская империя простиралась от Иберии до Кавказа. Мы должны вернуть образ Рима и стремиться к восстановлению империи в современную эпоху."
  ITA_dismantle_parliament:0 "Расформировать парламент"
- ITA_dismantle_parliament_desc:0 "If the First World War taught us anything, it is that an Italian Kingdom and a democratic Parliament don't go well together. We have a king once again, we should dismantle the Italian Parliament and grant its powers to the King."
+ ITA_dismantle_parliament_desc:0 "Если Первая мировая война и научила нас чему-то, так это тому, что итальянское королевство и демократический парламент не очень хорошо идут вместе. У нас снова есть король, мы должны демонтировать итальянский парламент и предоставить его полномочия королю."
  ITA_divide_et_impera:0 "Разделяй и властвуй"
  ITA_divide_et_impera_desc:0 "'Divide Et Impera', meaning 'Divide And Rule' literally means gaining and maintaining power by breaking up larger concentrations of power into pieces that individually have less power than the one implementing the strategy. This idea should guide our policy if we want to from a New Rome."
  ITA_federation_of_romans:0 "Федерация римлян"
- ITA_federation_of_romans_desc:0 "Whilst it would be great to see our borders match those of old Rome, the times have changed, as have the cultures of Rome. Instead of war and conquest, we should attempt to unite all Roman nations, in a new Roman Federation."
+ ITA_federation_of_romans_desc:0 "Было бы здорово, если бы наши границы совпадали с границами старого Рима, но времена изменились, как и культура Рима. Вместо войны и завоеваний мы должны попытаться объединить все римские народы в новую Римскую Федерацию."
  ITA_march_on_rome:0 "Новый Марш в Риме"
  ITA_march_on_rome_desc:0 "Муссолини пошел в Рим со своими черно-рубашечниками, чтобы захватить власть. Мы должны помочь нашим фашистским движениям организовать второе, чтобы официально вновь принять фашизм. Поезда уже ходят вовремя, поэтому мы можем сосредоточиться на победе с самого начала."
  ITA_reclaim_colonies:0 "Вернуть наши колонии"
- ITA_reclaim_colonies_desc:0 "The Italian Colonial Empire was definitely not the greatest in the world, but if we wish to show the world the might of fascism, we must restore it! Those Africans are basically subhuman next to Italians, re-conquering our colonies should be a piece of Tiramisu."
+ ITA_reclaim_colonies_desc:0 "Итальянская колониальная империя определенно не была величайшей в мире, но если мы хотим показать миру мощь фашизма, мы должны ее восстановить! Эти африканцы, по сути, недочеловек рядом с итальянцами, восстановление наших колоний должно быть куском Тирамису."
  ITA_renew_lateran_treaties:0 "Возобновить Латеранские договоры"
- ITA_renew_lateran_treaties_desc:0 "The Lateran Treaties were a pact between Fascist Italy and the Vatican City, where the 'Roman Question' was settled, with Italy finally recognizing the Holy See as an independent micro-state. They have been a part of our democratic constitution, so we should make sure they know our Fascist government will respect them. For now."
+ ITA_renew_lateran_treaties_desc:0 "Латеранские договоры были пактом между фашистской Италией и Ватиканом, где был урегулирован "римский вопрос", и Италия, наконец, признала Святой Престол в качестве независимого микрогосударства. Они были частью нашей демократической конституции, поэтому мы должны удостовериться, что наше фашистское правительство будет уважать их. Пока что."
  ITA_pesky_states:0 "Ультиматум минорам"
  ITA_pesky_states_desc:0 "Its time to tell the micro-states within Italy that the government doesn't recognize their right to exist. The will submit to the new Duce, or our new blackshirt legions will march on them."
  ITA_retake_african_coast:0 "Захватить африканское побережье"
  ITA_retake_african_coast_desc:0 "Люди думают о Европе, когда думают о Древнем Риме, но Северная Африка также была важной частью этого. Эти народы бедны и слабы, мы легко сможем взять их и восстановить римское правление в регионе."
  ITA_invite_the_gauls:0 "Западная Европа"
- ITA_invite_the_gauls_desc:0 "Our Western European brothers are also the children of Rome. If we want to make our Roman Federation into a real successor of the Empire, we should offer them membership."
+ ITA_invite_the_gauls_desc:0 "Наши западноевропейские братья тоже дети Рима. Если мы хотим превратить нашу Римскую Федерацию в настоящего наследника империи, мы должны предложить им членство."
  ITA_invite_africans:0 "Африка и Ближний Восток"
- ITA_invite_africans_desc:0 "Africa and the Middle East have changed a lot since they were Roman. New cultures and the rise of Islam may have changed them forever, but they too, are children of Rome. We should offer them membership into our Federation."
+ ITA_invite_africans_desc:0 "Африка и Ближний Восток сильно изменились со времен Римской империи. Новые культуры и подъем ислама, возможно, изменили их навсегда, но они тоже дети Рима. Мы должны предложить им членство в нашей Федерации."
  ITA_our_lands_balkans:0 "Расширить наш контроль над Адриатическим морем"
  ITA_our_lands_balkans_desc:0 "Истрия, Фиуме и Далмация, не Словения и не Хорватия. Италия должна контролировать Балканы, если мы хотим доминировать в Средиземноморье. Мы заставим наших соседей принять некоторые песмотренные границы или принять наши неудержимые армии, пересматривающие их силой."
  ITA_strike_gaul:0 "Поразить запад"
@@ -102,9 +102,9 @@
  ITA_our_savoie:0 "Савойя и Корсика"
  ITA_our_savoie_desc:0 "Савойя была незаконно передана французам, когда нам понадобилась их помощь против австрийцев. С тех пор прошло много времени, и теперь Италия - сильная, независимая нация. Мы должны вернуть Савойю, недопустимо иметь у власти Дом Савойи, пока регион находится под французским правлением."
  ITA_recover_balkans:0 "Восстановить Балканскую область"
- ITA_recover_balkans_desc:0 "The Balkan region is currently a mixture of populations, and that has lead to much conflict, as we saw in the collapse of Yugoslavia. We must unite them all under the Roman flag, as brothers, and put an end to these artificial nations."
+ ITA_recover_balkans_desc:0 "В настоящее время Балканский регион представляет собой смесь населения, и это привело к многочисленным конфликтам, как мы видели на примере распада Югославии. Мы должны объединить их всех под римским флагом, как братья, и положить конец этим искусственным нациям."
  ITA_invite_balkan_countries:0 "Балканы"
- ITA_invite_balkan_countries_desc:0 "The Balkans should be invited into the Roman Federation, to allow it to span the whole of the Mediterranean cost. They were a vital part of the Western Empire, and the recent chaos in the region is a disgrace to the memory of Rome."
+ ITA_invite_balkan_countries_desc:0 "Балканы должны быть приглашены в Римскую Федерацию, чтобы она могла охватить всю Средиземноморскую зону. Они были жизненно важной частью Западной империи, и недавний хаос в этом регионе является позором для памяти Рима."
  ITA_strike_germans_before_they_can:0 "Германия"
  ITA_strike_germans_before_they_can_desc:0 "Именно германские варвары разрушили Старый Рим, и теперь рождается Новый Рим. Если мы хотим гарантировать его выживание, мы должны обеспечить, чтобы немцы не представляли угрозы, и мы не будем ждать, пока они нанесут первый удар. Готовьте Легионы, мы пойдем на Берлин!"
  ITA_arabian_black_gold:0 "Черное золото Аравии"
@@ -116,7 +116,7 @@
  ITA_demand_crown_albania:0 "Требовать албанский трон"
  ITA_demand_crown_albania_desc:0 "Король Витторио Эммануил III получил трон Албании от короля Зога. С восстановлением итальянской монархии, единственно правильно, чтобы итальянский король снова получил власть над Албанией."
  ITA_italian_empire:0 "Император"
- ITA_italian_empire_desc:0 "By taking back our colonies we have de facto restored the Italian Empire, and therefore our glorious can now officially claim the Kingdom of Italy is now the Empire of Italy. All Hail Emperor Vittorio IV!"
+ ITA_italian_empire_desc:0 "Вернув наши колонии, мы де-факто восстановили Итальянскую империю, и поэтому наша слава может теперь официально претендовать на то, что Итальянское королевство теперь является Итальянской империей. Слава Императору Витторию IV!"
  ITA_attack_on_america:0 "Атаковать Америку"
  ITA_attack_on_america_desc:0 "Соединенные Штаты стояли за вторжением в нашу страну и падением Италии во время Второй мировой войны. Италия только ухудшилась с тех пор, но теперь мы восстановили свое законное место среди мировых держав. Итак, настало время для мести. Мы сожжем Вашингтон, давайте покажем американцам истинную мощь детей Рима!"
  ITA_with_europe:0 "Продолжать европейское сотрудничество"
@@ -128,7 +128,7 @@
  ITA_EU_expansion_of_2004:0 "Расширение ЕС в 2004 году"
  ITA_EU_expansion_of_2004_desc:0 "The EU expanded for the last time in 1995, when Finland, Sweden and Austria joined.\nNow, it is time to bring even more partners into our economic pact. The list of possible candidates includes Estonia, Latvia, Lithuania, Malta, Poland, Slovakia, Slovenia, the Czech Republic, Hungary and Cyprus."
  ITA_european_cooperation_2:0 "Европейское сотрудничество II"
- ITA_european_cooperation_2_desc:0 "Our EU investments have begun to pay off, so we should expand our investment plans to include more EU members."
+ ITA_european_cooperation_2_desc:0 "Наши инвестиции в ЕС начали окупаться, поэтому мы должны расширить наши инвестиционные планы, чтобы охватить больше членов ЕС."
  ITA_EU_expansion_of_2007:0 "Расширение ЕС в 2007 году"
  ITA_EU_expansion_of_2007_desc:0 "После успешного расширения ЕС на восток мы также должны смотреть на юго-восток. Болгария и Румыния являются возможными членами."
  ITA_eastern_investments:0 "Восточные инвестиции"
@@ -406,7 +406,7 @@
  italy_news.6.d:0 "Italy has announced that the treaties to unite Europe will now be passed to the European Parliament for approval. It's a matter of months until Europe will be united under a single state."
  italy_news.6.o1:0 "Let's see what happens."
  italy_news.7.t:0 "Italy 'declares war' on Mafia!"
- italy_news.7.d:0 "Organized criminality is a big problem in Italy. Since decades their shady businesses were allowed to take place with almost no repercussions from the Italian government. However, earlier today Italy officially began the 'process' to eradicate organized criminality in the whole country. Only time will tell how effective this 'war' will be."
+ italy_news.7.d:0 "Организованная преступность - большая проблема в Италии. Десятилетиями их теневой бизнес разрешался практически без последствий для итальянского правительства. Однако сегодня Италия официально начала "процесс" по искоренению организованной преступности по всей стране. Только время покажет, насколько эффективной будет эта "война"."
  italy_news.7.o1:0 "We are ready"
  italy_news.7.o2:0 "Ok"
  italy_news.8.t:0 "Italian war on Mafia is a success!"
@@ -414,7 +414,7 @@
  italy_news.8.o1:0 "Еще одна великая победа нашей страны"
  italy_news.8.o2:0 "Ok"
  italy_news.9.t:0 "Итальянская война с мафией провалилась!"
- italy_news.9.d:0 "Apparently, news coming from Italy tell us that not even the biggest of their attempts ended up into finally eradicating Mafia from Italy. The feared criminal organization's counter-attacks to stop the Italian government from cutting their powers proved to be enough to make Italy stop messing with them, effectively stopping the 'war' on Mafia."
+ italy_news.9.d:0 "Очевидно, что новости из Италии говорят нам о том, что даже самые большие их попытки не привели к окончательному искоренению мафии из Италии. Опасаясь контрнападения преступной организации, чтобы остановить итальянское правительство от сокращения своих полномочий оказалось достаточно, чтобы заставить Италию перестать связываться с ними, фактически остановив "войну" с мафией."
  italy_news.9.o1:0 "We had to"
  italy_news.9.o2:0 "Interesting development"
  
@@ -434,6 +434,6 @@
  
  #Custom Focus Tooltips
  ITA_begin_war_on_mafia_tt:0 "§YDeclares 'War' on the Mafia§!\n"
- ITA_empower_the_king_TT:0 "§YThe House of Savoy returns to lead our great nation!§!\n"
+ ITA_empower_the_king_TT:0 "§YДом Савоя возвращается, чтобы возглавить нашу великую нацию!§!\n"
  ITA_march_on_rome_TT:0 "§YTricolour Flame marches on Rome! Fascism Once Again Reigns in Italy§!\n"
  
